# docker-grpc

./: README.md  pyproject.toml
src/docker_grpc/controller/: __init__.py  client.py  controller.proto  controller_pb2.py  controller_pb2_grpc.py  server.py
src/docker_grpc/helloworld/: __init__.py  client.py  helloworld_pb2.pyi  helloworld_pb2_grpc.py  helloworld_pb2_grpc.pyi  server.py
